Fix overflow in movehist variations

--- a/src/scss/movehist.scss
+++ b/src/scss/movehist.scss
@@ -10,7 +10,7 @@ ul#movehist {
 	}
 
 	li.variation {
-		margin-left: 20%;
+		padding-left: 20%;
 
 		&, &> ul > li > button {
 			font-size: 90%;
